--- a/src/config.ini
+++ b/src/config.ini
@@ -1,5 +1,5 @@
 [mysql]
-host = 127.0.0.1
-database = gubbler
-user = root
+host = 192.168.0.104
+database = gabbler
+user = shalamai
 password = fatima008
